--- a/index2.html
+++ b/index2.html
@@ -80,7 +80,7 @@ var width = 1800,
 	var color = d3.scale.category10();
 	
 //data source variables
-var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1DLuUNS9qbFDxYcBBVI2Ad6STPfpP-nWDhhy-bKMVIJ0/edit?usp=sharing',
+var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQgGVQdoPrdBFxoh0MUDy2MkCOTubbv7HCSFmy7hdDvCSAzMLlsVdKZkCUEtnMM5fN-x7iAP_XZp81u/pubhtml',
 	linksData,
 	nodesData;
 	loadedLinks = false;
