--- a/index.html
+++ b/index.html
@@ -1,78 +1,246 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<style>
+<html>
+    <head>
+        <title>D3 Force Layout Example 1</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="main.css">
+        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+    <style>
+            path.link {
+                fill: none;
+                stroke: #666;
+                stroke-width: 1.5px;
+            }   
 
-.link {
-  stroke: #000;
+            circle {
+                fill: #ccc;
+                stroke: #fff;
+                stroke-width: 1.5px;
+            }
+
+            text {
+                fill: #000;
+                font: 10px sans-serif;
+                pointer-events: none;
+            }
+
+        </style>
+		    <style>
+            body, html {
+    margin:0;
+    padding:0;
+    font-family:"Arial", sans-serif;
+    font-size:0.95em;
+    text-align:center;
 }
 
-.node {
-  stroke: #fff;
+#chart {
+    background-color:#F5F2EB;
+    border: 1px solid #CCC;
 }
 
-</style>
-<body>
-<script src="//d3js.org/d3.v3.min.js"></script>
-<script>
+.bar {
+    fill:purple;
+    shape-rendering:crispEdges;
+}
 
-var width = 960,
-    height = 500;
+.bar-label {
+    text-anchor:end;
+    fill:white;
+}
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
+.axis path,
+.axis line {
+    fill:none;
+    stroke:#000;
+    shape-rendering:crispEdges;
+}
 
-var force = d3.layout.force()
-    .size([width, height]);
+.gridline path,
+.gridline line {
+    fill: none;
+    stroke: #ccc;
+    shape-rendering: crispEdges;
+}
 
-d3.csv("graph.csv", function(error, links) {
-  if (error) throw error;
+.trendline {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 2;
+    /*stroke-dasharray:10;*/
+}
 
-  var nodesByName = {};
+.area {
+    fill: #ccc;
+    stroke: #ccc;
+    opacity: 0.25;
+}
 
-  // Create nodes for each unique source and target.
-  links.forEach(function(link) {
-    link.source = nodeByName(link.source);
-    link.target = nodeByName(link.target);
-  });
+.donut {
+    opacity:0.1;
+}
+.axis-label {
+    text-anchor: middle;
+}
+.chart-header {
+    text-transform: capitalize;
+    font-size: 110%;
+}
+.temperature {
+    stroke:#95cddf;
+    stroke-width:2px;
+}
 
-  // Extract the array of nodes from the map by name.
-  var nodes = d3.values(nodesByName);
+.rain {
+    fill:none;
+    stroke:#cc627a;
+    stroke-width:0.5;
+}
 
-  // Create the link lines.
-  var link = svg.selectAll(".link")
-      .data(links)
-    .enter().append("line")
-      .attr("class", "link");
+#cursor {
+    stroke: black;
+}
+        </style>
+    </head>
+    <body>
+        <script>
+            var w = 800;
+            var h = 450;
+            var margin = {
+                top: 20,
+                bottom: 20,
+                left: 20,
+                right: 20
+            };
+            var width = w - margin.left - margin.right;
+            var height = h - margin.top - margin.bottom;
 
-  // Create the node circles.
-  var node = svg.selectAll(".node")
-      .data(nodes)
-    .enter().append("circle")
-      .attr("class", "node")
-      .attr("r", 4.5)
-      .call(force.drag);
+            var svg = d3.select("body")
+                    .append("svg")
+                    .attr("id", "chart")
+                    .attr("height", h)
+                    .attr("width", w);
 
-  // Start the force layout.
-  force
-      .nodes(nodes)
-      .links(links)
-      .on("tick", tick)
-      .start();
+            var linkScale = d3.scale.linear()
+                    .range([0.25, 1.0]);
 
-  function tick() {
-    link.attr("x1", function(d) { return d.source.x; })
-        .attr("y1", function(d) { return d.source.y; })
-        .attr("x2", function(d) { return d.target.x; })
-        .attr("y2", function(d) { return d.target.y; });
+            var colorScale = d3.scale.category20();
 
-    node.attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; });
-  }
+            d3.csv("data.csv", function (error, links) {
+                var nodes = {};
 
-  function nodeByName(name) {
-    return nodesByName[name] || (nodesByName[name] = {name: name});
-  }
-});
+                links.forEach(function (link) {
+                    link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
+                    link.target = nodes[link.target] || (nodes[link.target] = {name: link.target});
+                    link.value = +link.value;
+                });
 
-</script>
+                linkScale.domain(d3.extent(links, function (d) {
+                    return d.value;
+                }));
+
+                var force = d3.layout.force()
+                        .nodes(d3.values(nodes))
+                        .links(links)
+                        .size([width, height])
+                        .linkDistance(60)
+                        .charge(-300)
+                        .on("tick", tick)
+                        .start();
+
+                svg.append("svg:defs").selectAll('marker')
+                        .data(['end'])
+                        .enter()
+                        .append("svg:marker")
+                        .attr('id', function (d) {
+                            return d;
+                        })
+                        .attr('viewBox', '0 -5 10 10')
+                        .attr('refX', 15)
+                        .attr('refY', -1.5)
+                        .attr('markerWidth', 6)
+                        .attr('markerHeight', 6)
+                        .attr('orient', 'auto')
+                        .append('svg:path')
+                        .attr("d", "M0,-5L10,0L0,5");
+
+                var path = svg.append("svg:g").selectAll("path")
+                        .data(force.links())
+                        .enter()
+                        .append("svg:path")
+                        .classed("link", true)
+                        .attr("marker-end", "url(#end)");
+
+                var node = svg.selectAll(".node")
+                        .data(force.nodes())
+                        .enter()
+                        .append("g")
+                        .classed("node", true)
+                        .on("click", click)
+                        .on("dblclick", dblclick)
+                        .call(force.drag());
+
+                node.append("circle")
+                        .attr("r", 5)
+                        .style("fill", function (d) {
+                            return colorScale(d.name)
+                        });
+
+
+                node.append("text")
+                        .attr("x", 12)
+                        .attr("dy", ".35em")
+                        .text(function (d) {
+                            return d.name;
+                        });
+
+                function tick() {
+                    path.attr("d", function (d) {
+                        var dx = d.target.x - d.source.x,
+                                dy = d.target.y - d.source.y,
+                                dr = Math.sqrt(dx * dx + dy * dy);
+
+                        return "M" +
+                                d.source.x + "," + d.source.y +
+                                "A" + dr + "," + dr + " 0 0,1 " +
+                                d.target.x + "," + d.target.y;
+                    }).style("opacity", function (d) {
+                        return linkScale(d.value);
+                    });
+
+                    node.attr("transform", function (d) {
+                        return "translate(" + d.x + "," + d.y + ")";
+                    });
+                }
+
+                function click() {
+                    d3.select(this).select("text").transition()
+                            .duration(750)
+                            .attr("x", 22)
+                            .style("fill", "steelblue")
+                            .style("stroke", "lightsteelblue")
+                            .style("stroke-width", ".5px")
+                            .style("font", "20px sans-serif");
+
+                    d3.select(this).select("circle").transition()
+                            .duration(750)
+                            .attr("r", 16);
+                }
+
+                function dblclick() {
+                    d3.select(this).select("text").transition()
+                            .duration(750)
+                            .attr("x", 12)
+                            .style("fill", "black")
+                            .style("stroke", "none")
+                            .style("stroke-width", "none")
+                            .style("font", "10px sans-serif");
+
+                    d3.select(this).select("circle").transition()
+                            .duration(750)
+                            .attr("r", 6);
+                }
+            });
+        </script>
+    </body>
+</html>
