--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     .attr("width", w);
 
             var linkScale = d3.scale.linear()
-                    .range([1.0, 1.0]);
+                    .range([.25, 1.0]);
 
             var colorScale = d3.scale.category20();
 
@@ -143,7 +143,7 @@
                         .nodes(d3.values(nodes))
                         .links(links)
                         .size([width, height])
-                        .linkDistance(60)
+                        .linkDistance(100)
                         .charge(-300)
                         .on("tick", tick)
                         .start();
